--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'java-library'
     id 'com.diffplug.spotless' version '6.25.0'
     id 'com.github.johnrengelman.shadow' version '8.1.1'
+    id 'checkstyle'
 }
 
 repositories {
@@ -13,7 +14,7 @@ repositories {
 dependencies {
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.14.2'
     implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:2.14.2'
-    compileOnly  'org.spigotmc:spigot-api:1.19-R0.1-SNAPSHOT'
+    compileOnly 'org.spigotmc:spigot-api:1.19-R0.1-SNAPSHOT'
     compileOnly 'org.jetbrains:annotations:15.0'
     compileOnly 'org.projectlombok:lombok:1.18.32'
     annotationProcessor 'org.projectlombok:lombok:1.18.32'
@@ -41,14 +42,14 @@ tasks.withType(JavaCompile).configureEach {
 }
 
 spotless {
-  format 'misc', {
-    target '*.gradle', '.gitattributes', '.gitignore'
-    trimTrailingWhitespace()
-    indentWithSpaces(4)
-    endWithNewline()
-  }
-  java {
-    googleJavaFormat('1.19.2').reflowLongStrings().skipJavadocFormatting()
-    formatAnnotations()
-  }
+    format 'misc', {
+        target '*.gradle', '.gitattributes', '.gitignore'
+        trimTrailingWhitespace()
+        indentWithSpaces(4)
+        endWithNewline()
+    }
+    java {
+        googleJavaFormat('1.19.2').reflowLongStrings().skipJavadocFormatting()
+        formatAnnotations()
+    }
 }
