--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'java-library'
+    id 'com.github.johnrengelman.shadow' version '8.1.1'
 }
 
 repositories {
@@ -9,18 +10,30 @@ repositories {
 }
 
 dependencies {
-    implementation 'com.fasterxml.jackson.core:jackson-databind:2.17.0'
-    implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:2.17.0'
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.14.2'
+    implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:2.14.2'
     compileOnly  'org.spigotmc:spigot-api:1.19-R0.1-SNAPSHOT'
     compileOnly 'org.jetbrains:annotations:15.0'
     compileOnly 'org.projectlombok:lombok:1.18.32'
     annotationProcessor 'org.projectlombok:lombok:1.18.32'
+
+    shadow 'com.fasterxml.jackson.core:jackson-databind:2.14.2'
+    shadow 'com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:2.14.2'
 }
 
 group = 'au.com.grieve'
 version = 'Clod-1.4.0-SNAPSHOT'
 description = 'PortalNetwork'
 java.sourceCompatibility = JavaVersion.VERSION_11
+
+shadowJar {
+    archiveClassifier.set('')
+    enableRelocation true
+    minimize()
+}
+tasks.named('build') {
+    dependsOn('shadowJar')
+}
 
 tasks.withType(JavaCompile).configureEach {
     options.encoding = 'UTF-8'
