--- a/build.gradle
+++ b/build.gradle
@@ -24,7 +24,7 @@ dependencies {
 }
 
 group = 'au.com.grieve'
-version = 'Clod-1.4.0-SNAPSHOT'
+version = "./src/build/version.py".execute().text.trim()
 description = 'PortalNetwork'
 java.sourceCompatibility = JavaVersion.VERSION_11
 
