add Makefile, ability to build docs

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+/venv/
+
 # Created by https://www.toptal.com/developers/gitignore/api/linux,maven,intellij+iml,gradle,macos
 # Edit at https://www.toptal.com/developers/gitignore?templates=linux,maven,intellij+iml,gradle,macos
 
