--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,7 @@ repositories {
 dependencies {
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.14.2'
     implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:2.14.2'
+    implementation 'dev.jorel:commandapi-bukkit-shade:9.3.0'
     compileOnly 'org.spigotmc:spigot-api:1.19-R0.1-SNAPSHOT'
     compileOnly 'org.jetbrains:annotations:15.0'
     compileOnly 'org.projectlombok:lombok:1.18.32'
@@ -24,7 +25,7 @@ dependencies {
 }
 
 group = 'au.com.grieve'
-version = "./src/build/version.py".execute().text.trim()
+version = './src/build/version.py'.execute().text.trim()
 description = 'PortalNetwork'
 java.sourceCompatibility = JavaVersion.VERSION_17
 
