--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 /venv/
+/local.gradle
 
 # Created by https://www.toptal.com/developers/gitignore/api/linux,maven,intellij+iml,gradle,macos
 # Edit at https://www.toptal.com/developers/gitignore?templates=linux,maven,intellij+iml,gradle,macos
