--- a/build.gradle
+++ b/build.gradle
@@ -25,8 +25,10 @@ dependencies {
 group = 'au.com.grieve'
 version = './src/build/version.py'.execute().text.trim()
 description = 'PortalNetwork'
-archivesBaseName = "${description}-Clod"
 java.sourceCompatibility = JavaVersion.VERSION_17
+base {
+    archivesName = "${description}-Clod"
+}
 
 shadowJar {
     archiveClassifier.set('')
@@ -39,6 +41,7 @@ tasks.named('build') {
 
 tasks.withType(JavaCompile).configureEach {
     options.encoding = 'UTF-8'
+    options.compilerArgs << '-Xlint:deprecation'
 }
 
 spotless {
