remove dependency on CommandAPI

--- a/build.gradle
+++ b/build.gradle
@@ -7,15 +7,14 @@ plugins {
 
 repositories {
     mavenCentral()
-    maven { url = 'https://hub.spigotmc.org/nexus/content/repositories/snapshots/' }
+    maven { url = 'https://repo.papermc.io/repository/maven-public/' }
     maven { url = 'https://oss.sonatype.org/content/groups/public/' }
 }
 
 dependencies {
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.14.2'
     implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:2.14.2'
-    implementation 'dev.jorel:commandapi-bukkit-shade:9.4.0'
-    compileOnly 'org.spigotmc:spigot-api:1.19-R0.1-SNAPSHOT'
+    compileOnly 'io.papermc.paper:paper-api:1.20.4-R0.1-SNAPSHOT'
     compileOnly 'org.jetbrains:annotations:15.0'
 
     shadow 'com.fasterxml.jackson.core:jackson-databind:2.14.2'
